--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^3.3.0",
     "apollo-server-express": "^2.12.0",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9"
   },
