--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server/server.js",
     "scripts": {
         "start": "node server/server.js",
-        "develop": "concurrently \"cd server && npm start\" \"cd client && npm start\"",
+        "develop": "concurrently \"cd server && npm start\" \"cd client && npm run start-port\"",
         "install": "cd server && npm i && cd ../client && npm i",
         "seed": "cd server && npm run seed",
         "build": "cd client && npm run build"
@@ -15,5 +15,6 @@
     "license": "ISC",
     "devDependencies": {
         "concurrently": "^5.1.0"
-    }
+    },
+    "dependencies": {}
 }
