--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-    "name": "Eridium",
+    "name": "eridium",
     "version": "1.0.0",
     "description": "",
     "main": "server/server.js",
+    "engines" : { "node" : ">=14.17" },
     "scripts": {
         "start": "node server/server.js",
         "develop": "concurrently \"cd server && npm start\" \"cd client && npm run start-port\"",
