--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "main": "server/server.js",
-    "engines" : { "node" : ">=14.17" },
+    "engines" : { "node" : "14.x" },
     "scripts": {
         "start": "node server/server.js",
         "develop": "concurrently \"cd server && npm start\" \"cd client && npm run start-port\"",
