--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start-port": "set PORT=3005 && react-scripts start",
+    "start-mac": "PORT=3005 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
