--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
     "version": "1.0.0",
     "description": "",
     "main": "server/server.js",
-    "engines" : { "node" : "14.x" },
+    "engines": {
+        "node": "14.x"
+    },
     "scripts": {
         "start": "node server/server.js",
         "develop": "concurrently \"cd server && npm start\" \"cd client && npm run start-port\"",
+        "develop-mac": "concurrently \"cd server && npm start\" \"cd client && npm run start-mac\"",
         "install": "cd server && npm i && cd ../client && npm i",
         "seed": "cd server && npm run seed",
         "build": "cd client && npm run build"
