--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "server/server.js",
-    "engines" : { "node" : "14.x" },
+    "engines": {
+        "node": "14.x"
+    },
     "scripts": {
         "start": "node server/server.js",
         "develop": "concurrently \"cd server && npm start\" \"cd client && npm run start-port\"",
@@ -17,5 +19,7 @@
     "devDependencies": {
         "concurrently": "^5.1.0"
     },
-    "dependencies": {}
+    "dependencies": {
+        "react-apollo": "^3.1.5"
+    }
 }
