--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "scripts": {
         "start": "node server/server.js",
-        "develop": "concurrently \"cd server && npm start\" \"cd client && npm run start\"",
+        "develop": "concurrently \"cd server && npm start\" \"cd client && npm run start-port\"",
         "install": "cd server && npm i && cd ../client && npm i",
         "seed": "cd server && npm run seed",
         "build": "cd client && npm run build"
