--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "apollo-server": "^3.3.0",
     "apollo-server-express": "^2.12.0",
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
