--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "concurrently": "^5.1.0"
     },
     "dependencies": {
+        "dotenv": "^10.0.0",
         "react-apollo": "^3.1.5"
     }
 }
